Layout issues are fixed

--- a/UI/src/styles/globals.scss
+++ b/UI/src/styles/globals.scss
@@ -7,3 +7,8 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  font-family: "Gantari", sans-serif;
+  font-style: normal;
+}
